# Brotato-ArchipelagoClient

./: .gitignore  CHANGES.md  Justfile  README.md  copy_release.ps1  mod_main.gd  pyproject.toml  run_brotato_debug.ps1  setup_brotato_unpacked.ps1
.github/actions/: setup.yml
.github/workflows/: ci.yml  publish.yml  setup.yml
apworld/: Constants.py  Items.py  Locations.py  Options.py  Regions.py  Rules.py  __init__.py
apworld/brotato/: Constants.py  Options.py  Regions.py  Rules.py  __init__.py  _loot_crate_groups.py  archipelago.json  characters.py  constants.py  item_weights.py  items.py  locations.py  loot_crates.py  options.py  regions.py  rules.py  shop_slots.py  waves.py
brotato_apworld/: Constants.py  Items.py  Locations.py  Regions.py
brotato_client_mod/RampagingHippy-ArchipelagoClient/: mod_main.gd
client_mod/.import/: ap_button_icon_error.png-b71a62fe87b2121433c006406726e1e0.stex  ap_icon_full.png-aef70b1896c8ca3ef6ec3597141df013.md5  ap_icon_full.png-aef70b1896c8ca3ef6ec3597141df013.stex  ap_icon_small.png-65983201fd04224eb0008a9d35321b33.md5  ap_icon_small.png-65983201fd04224eb0008a9d35321b33.stex  ap_logo_100_gift_item_common.png-c4e8a272148e71e9e4e8ae7a7a6d6ffe.md5  (+28 more)
content/consumables/: ap_icon.png.import  (+7 more)
content_data/: ap_consumables.tres
extensions/: main.gd
singletons/: ap_client_service.gd  brotato_ap_adapter.gd  constants.gd  data_package.gd
tools/: create_dev_symlinks.py  download_gdretools.py  download_godot.py  extract_brotato.py  remove_ap_version_from_template.py
translations/: modname.en.translation
utils/: item_stats.py
(+187 files in other folders)
